[package]
authors = ["Leo Conrad-Shah <singularlymappedtotheownzone@gmail.com>"]
name = "fuse-sys"
build = "build.rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "filesystem-macro"
]

[dependencies]
filesystem-macro = { path = "filesystem-macro", optional = true }

[dev-dependencies]
libc = "0.2.119"
fuse-sys = { path = ".", features = ["auto"] }

[build-dependencies]
bindgen = "*"

[features]
auto = ["filesystem-macro"]
